Fix Toast close button alignment in Chrome

--- a/notex-web/src/components/Toast.scss
+++ b/notex-web/src/components/Toast.scss
@@ -39,8 +39,6 @@
   padding: .2em .5em;
 
   svg {
-    display: flex;
-
     path {
       fill: #AEAFAF;
     }
